# prbench-models

./: .gitignore  .gitmodules  README.md  config.json  pyproject.toml
.github/workflows/: ci.yml
src/prbench_models/: structs.py  utils.py
src/prbench_models/geom2d/: utils.py
src/prbench_models/geom2d/envs/clutteredretrieval2d/: parameterized_skills.py
src/prbench_models/geom2d/envs/clutteredstorage2d/: parameterized_skills.py
src/prbench_models/geom2d/envs/motion2d/: parameterized_skills.py
src/prbench_models/geom2d/envs/obstruction2d/: parameterized_skills.py
src/prbench_models/geom2d/envs/stickbutton2d/: parameterized_skills.py
src/prbench_models/geom3d/: utils.py
src/prbench_models/geom3d/motion3d/: parameterized_skills.py
src/prbench_models/tidybot/: arm_controller.py  base_controller.py  ik_solver.py  utils.py
src/prbench_models/tidybot/ground/: parameterized_skills.py
tests/: test_pddl_planning.py  test_utils.py
tests/tidybot/: test_arm_controller.py  test_base_controller.py  test_tidybot3d_ik.py
